// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeContextProvider Snapshots should render with default config specified 1`] = `
<ContextProvider
  value={
    Object {
      "currentDensity": "compact",
      "currentDirection": "rtl",
      "currentLocale": "es",
      "currentTheme": "my theme",
      "currentThemeClassName": undefined,
      "directions": Array [
        "ltr",
        "rtl",
      ],
      "locales": Array [
        "en",
      ],
      "onUpdate": [Function],
      "themes": Array [
        "terra-default-theme",
      ],
    }
  }
>
  <div />
</ContextProvider>
`;

exports[`ThemeContextProvider Snapshots should render with no config 1`] = `
<ContextProvider
  value={
    Object {
      "currentDensity": undefined,
      "currentDirection": "ltr",
      "currentLocale": "en",
      "currentTheme": "terra-default-theme",
      "currentThemeClassName": undefined,
      "directions": Array [
        "ltr",
        "rtl",
      ],
      "locales": Array [
        "en",
      ],
      "onUpdate": [Function],
      "themes": Array [
        "terra-default-theme",
      ],
    }
  }
>
  <div />
</ContextProvider>
`;
